--- a/weapp/market_tools/tools/shake/templates/shake/webapp/shake.html
+++ b/weapp/market_tools/tools/shake/templates/shake/webapp/shake.html
@@ -53,10 +53,10 @@
 		 {% if cur_request_member and cur_request_member.is_subscribed %}
 		 {% if next_shake_detail %}
 		<h2 class="tc">
-			您来晚了，活动已结束!
+			您来晚了，红包已抢光!
 		</h2>
 		<p class="tc">
-			您来晚了，该时间段活动已结束！
+			您来晚了，该时间段红包已抢光！
 		</p> 
 		
 		<p class="tc xui-timeLimit">
@@ -75,7 +75,7 @@
 			</h2>
 			{% else %}
 			<h2 class="tc">
-				您来晚了，活动已结束!
+				您来晚了，红包已抢光!
 			</h2>
 			{% endif %}
 			{% endif %}
@@ -83,7 +83,7 @@
 		{% endif %}
 		 {% else %}
 		 <h2 class="tc">
-		 	先关注未来广场官方微信号<br/>
+		 	先关注未来广场官方微信号<br>
 		 	才能参与抢红包哟~
 		 </h2>
 		 {% endif %}
