[update]带参数二维码-显示现金与微众卡的统计金额，加入新的js view，实现advanced table中afterLoad功能
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@15615 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/static_v2/css/weixin_advance_manage.css
+++ b/weapp/static_v2/css/weixin_advance_manage.css
@@ -1149,3 +1149,12 @@
 	float: left;
 	padding: 0 0 0 10px;
 }
+
+.xui-qrcode-order-head {
+	display: block;
+}
+
+.xui-qrcode-order-head .xui-i-money {
+	font-weight: 700;
+	float: right;
+}
