[update]1、带参数二维码加入已支付、待发货、已发货三个状态订单的显示 2、带参数二维码优化微众卡支付订单图标显示
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@15616 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/static_v2/css/weixin_advance_manage.css
+++ b/weapp/static_v2/css/weixin_advance_manage.css
@@ -1158,3 +1158,25 @@
 	font-weight: 700;
 	float: right;
 }
+
+.xui-qrcode-list .xui-weizoomCard i{
+    display: inline-block;
+    width: 24px;
+    height: 17px;
+    background: url(/static_v2/img/editor/weizoomCard.jpg);
+    -webkit-background-size: 100%;
+    background-size: 100%;
+}
+.xui-qrcode-list .xui-weizoomCard span{
+    background: #fff;
+    display: inline-block;
+    min-width: 126px;
+    height: 32px;
+    border: 1px solid #56B2EC;
+    text-align: center;
+    line-height: 32px;
+    top:6px;
+    left: 20px;
+    z-index: 10;
+
+}
