--- a/weapp/weixin2/templates/weixin/advance_manage/qrcode_order.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/qrcode_order.html
@@ -104,7 +104,7 @@
 		</div>
 	{{/if}}
 
-	<ul class="xa-countLi">
+	<ul class="xui-qrcode-list xa-countLi">
         {{each(i, order) items}}
 		<li data-order-id="${order.id}">
 			<table width="100%" class="table mb15 xui-table-orderDetail">
