--- a/weapp/static_v2/js/view/member_update_integral/template.html
+++ b/weapp/static_v2/js/view/member_update_integral/template.html
@@ -19,7 +19,7 @@
 		</div>
 	</div>
 </div>
-<div class="tc" style="padding:7px 0 10px 0;background:#eaeef7;">
+<div class="tc" style="padding:7px 0 10px 0;background:#eaeef7;border-radius:0 0 4px 4px">
 	<div class="xa-order-ship-info">
 	</div>
 	<button class="btn btn-primary xa-submit">确 认</button>
