--- a/weapp/weixin2/templates/weixin/advance_manage/fanses.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/fanses.html
@@ -329,7 +329,7 @@ var FansTable = Backbone.View.extend({
             position:'down-left',
             isTitle: false,
             isArrow: false,
-            privateContainerClass:'xui-updateGradeOrTagBox'
+            privateContainerClass:'xui-updateGradeBox'
         });
         categorySelector.show({
             $action: $el,
