--- a/weapp/static_v2/js/view/member_update_tag/template.html
+++ b/weapp/static_v2/js/view/member_update_tag/template.html
@@ -3,7 +3,7 @@
 		<div class="xa-i-content clearfix p5">
 	
 		</div>
-		<div class="tc" style="padding:7px 0 10px 0;background:#eaeef7;">
+		<div class="tc" style="padding:7px 0 10px 0;background:#eaeef7;border-radius:0 0 4px 4px;">
 			<div class="xa-order-ship-info">
 			</div>
 			<button class="btn btn-primary xa-submit ml15 xa-close">确 认</button>
