--- a/weapp/static_v2/js/view/weixin_new_keyword/template.html
+++ b/weapp/static_v2/js/view/weixin_new_keyword/template.html
@@ -2,15 +2,15 @@
     <div class="xui-newKeyView pa">
     <div class="xui-key">
          <div class="xui-i-left"><span class="xui-colorRed">*</span> 规则：</div>
-         <div class="xui-i-right"> 
+         <div class="xui-i-right">
             <span class="ml20 xa-radio"><input type="radio" class="xa-exact" name="radiobutton" value="0" checked ></span>
             <span class="ml10"> 精确匹配 </span>
             <span class="ml50 xa-radio"><input type="radio" class="xa-mistiness" name="radiobutton" value="1"  ></span>
-            <span class="ml10"> 模糊匹配 </span> 
+            <span class="ml10"> 模糊匹配 </span>
          </div>
          <div class="xui-i-left"><span class="xui-colorRed">*</span> 关键词：</div>
-         <div class="xui-i-right"> 
-            <input type="text"  maxlength=15  data-validate="require-string" data-max-length="15" data-min-length="1" class="xa-add lh24 w198" placeHolder="输入回车可添加多个关键词"/> 
+         <div class="xui-i-right">
+            <input type="text"  maxlength=15  data-validate="require-string" data-maxlength="15" data-minlength="1" class="xa-add lh24 w198" placeHolder="输入回车可添加多个关键词"/>
          </div>
     </div>
     <div class="xui-show xa-keywords">
@@ -27,12 +27,12 @@
         <div class="xui-i-key fl ">
             <span class="data-keyword"> {{ keyword }}</span>
         </div>
-        <div class="xui-i-type fl  xa-mode"> 
+        <div class="xui-i-type fl  xa-mode">
             <span class="xa-data-type" data-type="{{ type }}">{{mode}}</span>
             <img class="fr xui-close xa-close" src="/static_v2/img/editor/icon_delete.png" />
         </div>
     </div>
 </script>
 
-   
-       
+
+
